So many slabs, new tnt, updated chiseled bookshelves