@@ -19,36 +19,36 @@ public class AnchorBlockEntityRenderer implements BlockEntityRenderer<AnchorBloc
 	private final ModelPart core;
 
 	public AnchorBlockEntityRenderer(BlockEntityRendererFactory.Context ctx) {
-		ModelPart cube_r1 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(0, 97, -1.5F, -10.0F, -1.5F, 3.0F, 20.0F, 3.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r2 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(12, 97, -1.5F, -10.0F, -1.5F, 3.0F, 20.0F, 3.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r3 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(102, 89, -1.5F, -10.0F, -1.5F, 3.0F, 20.0F, 3.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r4 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(104, 26, -6.0F, 3.0F, -6.0F, 3.0F, 20.0F, 3.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r5 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(0, 8, -1.0F, -4.5F, -1.0F, 2.0F, 8.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r6 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(0, 21, -1.0F, -5.5F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r7 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(8, 21, -1.3679F, -6.7998F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r8 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(78, 89, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r9 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(86, 89, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r10 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(8, 8, -1.0F, -4.5F, -1.0F, 2.0F, 8.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r11 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(0, 41, -1.0F, -5.5F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r12 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(42, 41, -1.3679F, -6.7998F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r13 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(32, 91, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r14 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(40, 93, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r15 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(54, 21, -1.0F, -4.5F, -1.0F, 2.0F, 8.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r16 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(54, 0, -1.0F, -5.5F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r17 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(24, 97, -1.3679F, -6.7998F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r18 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(48, 93, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r19 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(56, 93, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r20 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(0, 61, -1.0F, -4.5F, -1.0F, 2.0F, 8.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r21 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(24, 110, -1.0F, -5.5F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r22 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(64, 93, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r23 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(102, 113, -1.3679F, -6.7998F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r24 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(94, 89, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r25 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(36, 64, 6.0F, -38.0F, -8.0F, 2.0F, 5.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r26 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(44, 66, 6.0F, -38.0F, -8.0F, 2.0F, 5.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r27 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(78, 68, 6.0F, -38.0F, -8.0F, 2.0F, 5.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r28 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(104, 54, 4.0F, -33.0F, -9.0F, 5.0F, 3.0F, 5.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r29 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(105, 11, 4.0F, -33.0F, -9.0F, 5.0F, 3.0F, 5.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
-		ModelPart cube_r30 = new ModelPart(Arrays.asList(new ModelPart.Cuboid(106, 70, 4.0F, -33.0F, -9.0F, 5.0F, 3.0F, 5.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r1 = new ModelPart(List.of(new ModelPart.Cuboid(0, 97, -1.5F, -10.0F, -1.5F, 3.0F, 20.0F, 3.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r2 = new ModelPart(List.of(new ModelPart.Cuboid(12, 97, -1.5F, -10.0F, -1.5F, 3.0F, 20.0F, 3.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r3 = new ModelPart(List.of(new ModelPart.Cuboid(102, 89, -1.5F, -10.0F, -1.5F, 3.0F, 20.0F, 3.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r4 = new ModelPart(List.of(new ModelPart.Cuboid(104, 26, -6.0F, 3.0F, -6.0F, 3.0F, 20.0F, 3.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r5 = new ModelPart(List.of(new ModelPart.Cuboid(0, 8, -1.0F, -4.5F, -1.0F, 2.0F, 8.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r6 = new ModelPart(List.of(new ModelPart.Cuboid(0, 21, -1.0F, -5.5F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r7 = new ModelPart(List.of(new ModelPart.Cuboid(8, 21, -1.3679F, -6.7998F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r8 = new ModelPart(List.of(new ModelPart.Cuboid(78, 89, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r9 = new ModelPart(List.of(new ModelPart.Cuboid(86, 89, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r10 = new ModelPart(List.of(new ModelPart.Cuboid(8, 8, -1.0F, -4.5F, -1.0F, 2.0F, 8.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r11 = new ModelPart(List.of(new ModelPart.Cuboid(0, 41, -1.0F, -5.5F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r12 = new ModelPart(List.of(new ModelPart.Cuboid(42, 41, -1.3679F, -6.7998F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r13 = new ModelPart(List.of(new ModelPart.Cuboid(32, 91, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r14 = new ModelPart(List.of(new ModelPart.Cuboid(40, 93, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r15 = new ModelPart(List.of(new ModelPart.Cuboid(54, 21, -1.0F, -4.5F, -1.0F, 2.0F, 8.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r16 = new ModelPart(List.of(new ModelPart.Cuboid(54, 0, -1.0F, -5.5F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r17 = new ModelPart(List.of(new ModelPart.Cuboid(24, 97, -1.3679F, -6.7998F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r18 = new ModelPart(List.of(new ModelPart.Cuboid(48, 93, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r19 = new ModelPart(List.of(new ModelPart.Cuboid(56, 93, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r20 = new ModelPart(List.of(new ModelPart.Cuboid(0, 61, -1.0F, -4.5F, -1.0F, 2.0F, 8.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r21 = new ModelPart(List.of(new ModelPart.Cuboid(24, 110, -1.0F, -5.5F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r22 = new ModelPart(List.of(new ModelPart.Cuboid(64, 93, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r23 = new ModelPart(List.of(new ModelPart.Cuboid(102, 113, -1.3679F, -6.7998F, -1.0F, 2.0F, 11.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r24 = new ModelPart(List.of(new ModelPart.Cuboid(94, 89, -1.0795F, -15.8219F, -1.0F, 2.0F, 32.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r25 = new ModelPart(List.of(new ModelPart.Cuboid(36, 64, 6.0F, -38.0F, -8.0F, 2.0F, 5.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r26 = new ModelPart(List.of(new ModelPart.Cuboid(44, 66, 6.0F, -38.0F, -8.0F, 2.0F, 5.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r27 = new ModelPart(List.of(new ModelPart.Cuboid(78, 68, 6.0F, -38.0F, -8.0F, 2.0F, 5.0F, 2.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r28 = new ModelPart(List.of(new ModelPart.Cuboid(104, 54, 4.0F, -33.0F, -9.0F, 5.0F, 3.0F, 5.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r29 = new ModelPart(List.of(new ModelPart.Cuboid(105, 11, 4.0F, -33.0F, -9.0F, 5.0F, 3.0F, 5.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		ModelPart cube_r30 = new ModelPart(List.of(new ModelPart.Cuboid(106, 70, 4.0F, -33.0F, -9.0F, 5.0F, 3.0F, 5.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
 
 		cube_r1.setTransform(ModelTransform.of(7.4548F, -71.1605F, -7.2113F, -0.2618F, 0.0F, -0.2618F));
 		cube_r2.setTransform(ModelTransform.of(7.4548F, -71.1605F, 7.2887F, 0.2618F, 0.0F, -0.2618F));
@@ -81,11 +81,11 @@ public class AnchorBlockEntityRenderer implements BlockEntityRenderer<AnchorBloc
 		cube_r29.setTransform(ModelTransform.of(0.0F, 0.0F, 0.0F, -3.1416F, 0.0F, 3.1416F));
 		cube_r30.setTransform(ModelTransform.of(0.0F, 0.0F, 0.0F, 0.0F, 1.5708F, 0.0F));
 
-		this.core = new ModelPart(Arrays.asList(new ModelPart.Cuboid(79, 71, -5.0F, -29.0F, -46.0F, 9.0F, 9.0F, 9.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
+		this.core = new ModelPart(List.of(new ModelPart.Cuboid(79, 71, -5.0F, -29.0F, -46.0F, 9.0F, 9.0F, 9.0F, 0, 0, 0, false, 256, 256)), Collections.emptyMap());
 		this.core.setTransform(ModelTransform.of(0.0F, 0.0F, 0.0F, -1.0472F, 1.0472F, 0.0F));
 
 		this.bb_main = new ModelPart(
-				Arrays.asList(
+				List.of(
 						new ModelPart.Cuboid(38, 80, -5.0F, -15.0F, -5.0F, 10.0F, 3.0F, 10.0F, 0, 0, 0, false, 256, 256),
 						new ModelPart.Cuboid(0, 85, -4.0F, -19.0F, -4.0F, 8.0F, 4.0F, 8.0F, 0, 0, 0, false, 256, 256),
 						new ModelPart.Cuboid(96, 0, -3.0F, -21.0F, -3.0F, 6.0F, 2.0F, 6.0F, 0, 0, 0, false, 256, 256),
